--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <h2>Funcionalidades Básicas</h2>
     <p>Vou fazer diversos testes para me ambientar com as ferramentas</p>
 
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
 </body>
 <footer>Gustavo Kureck Piccoli - Todos os direitos reservados.</footer>
 </html>
